README modified, alt text added to all images.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <main>
         <!-- video section -->
         <section class="training-video">
-            <video src="assets/images/training-video.mp4" muted autoplay loop></video>
+            <video src="assets/video/training-video.mp4" muted autoplay loop></video>
             <!-- video overlay -->
             <div class="video-overlay">
                 <h1>Welcome to King Gym</h1>
@@ -170,8 +170,10 @@
                         Contact number: (01) 544 6721
                     </p>
                 </div>
-                <img class="desktop-location-right" src="assets/images/blue-location.jpg" alt="" />
-                <img class="mobile-location-img" src="assets/images/blue-location-mobile.jpg" alt="" />
+                <img class="desktop-location-right" src="assets/images/blue-location.jpg"
+                    alt="Westmoreland location images" />
+                <img class="mobile-location-img" src="assets/images/blue-location-mobile.jpg"
+                    alt="Westmoreland location images" />
             </div>
             <div class="location2">
                 <div class="location-text-right">
@@ -183,8 +185,10 @@
                         Contact number: (01) 544 6722
                     </p>
                 </div>
-                <img class="desktop-location-left" src="assets/images/orange-location.jpg" alt="" />
-                <img class="mobile-location-img" src="assets/images/orange-location-mobile.jpg" alt="" />
+                <img class="desktop-location-left" src="assets/images/orange-location.jpg"
+                    alt="Parnell location images" />
+                <img class="mobile-location-img" src="assets/images/orange-location-mobile.jpg"
+                    alt="Parnell location images" />
             </div>
             <div class="location3">
                 <div class="location-text-left">
@@ -196,8 +200,10 @@
                         Contact number: (01) 544 6723
                     </p>
                 </div>
-                <img class="desktop-location-right" src="assets/images/yellow-location.jpg" alt="" />
-                <img class="mobile-location-img" src="assets/images/yellow-location-mobile.jpg" alt="" />
+                <img class="desktop-location-right" src="assets/images/yellow-location.jpg"
+                    alt="Merrion location images" />
+                <img class="mobile-location-img" src="assets/images/yellow-location-mobile.jpg"
+                    alt="Merrion location images" />
             </div>
         </section>
         <!-- testimonials -->
@@ -213,7 +219,7 @@
                 <div class="row scale-row">
                     <div class="col-md-12 col-lg-4 testimonials-container">
                         <div class="circle">
-                            <img class="customer1" src="assets/images/customer1.jpg" alt="" />
+                            <img class="customer1" src="assets/images/customer1.jpg" alt="Anna portrait" />
                         </div>
                         <div class="text double-border1">
                             <h1>Anna</h1>
@@ -226,7 +232,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 testimonials-container">
                         <div class="circle">
-                            <img class="customer2" src="assets/images/customer2.jpg" alt="" />
+                            <img class="customer2" src="assets/images/customer2.jpg" alt="Jim portrait" />
                         </div>
                         <div class="text double-border2">
                             <h1>Jim</h1>
@@ -240,7 +246,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 testimonials-container">
                         <div class="circle">
-                            <img class="customer3" src="assets/images/customer3.jpg" alt="" />
+                            <img class="customer3" src="assets/images/customer3.jpg" alt="Emma portrait" />
                         </div>
                         <div class="text double-border3">
                             <h1>Emma</h1>
@@ -265,16 +271,16 @@
             </div>
             <div class="row gallery-container no-gutters">
                 <div class="col-md-6 col-xl-3">
-                    <img class="img1" src="assets/images/img1.jpg" alt="" />
+                    <img class="img1" src="assets/images/img1.jpg" alt="Man exercising with a personal trainer" />
                 </div>
                 <div class="col-md-6 col-xl-4">
-                    <img class="img2" src="assets/images/img2.jpg" alt="" />
-                    <img class="img3" src="assets/images/img3.jpg" alt="" />
+                    <img class="img2" src="assets/images/img2.jpg" alt="Gym coach teaching" />
+                    <img class="img3" src="assets/images/img3.jpg" alt="Running on a treadmill" />
                 </div>
                 <div class="col-md-12 col-xl-5">
-                    <img class="img4" src="assets/images/img4.jpg" alt="" />
-                    <img class="img5" src="assets/images/img5.jpg" alt="" />
-                    <img class="img6" src="assets/images/img6.jpg" alt="" />
+                    <img class="img4" src="assets/images/img4.jpg" alt="Man preparing to use gym bench" />
+                    <img class="img5" src="assets/images/img5.jpg" alt="Woman lifting a large weight" />
+                    <img class="img6" src="assets/images/img6.jpg" alt="Weights and green kettlebells" />
                 </div>
             </div>
         </section>
