Tag titles updated for accessibility, image sizes reduced. README modified

--- a/index.html
+++ b/index.html
@@ -79,9 +79,12 @@
                     </li>
                     <li class="footer-collapse">
                         <h1>Stay in touch</h1>
-                        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-                        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank" aria-label="Link to Instagram"><i
+                                class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank" aria-label="Link to Facebook"><i
+                                class="fab fa-facebook"></i></a>
+                        <a href="https://twitter.com/" target="_blank" aria-label="Link to Twitter"><i
+                                class="fab fa-twitter"></i></a>
                     </li>
                 </ul>
             </div>
@@ -289,9 +292,12 @@
         <section class="social-media">
             <div class="group">
                 <h1>Stay in touch</h1>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" aria-label="Link to Instagram"><i
+                        class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" aria-label="Link to Facebook"><i
+                        class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com/" target="_blank" aria-label="Link to Twitter"><i
+                        class="fab fa-twitter"></i></a>
             </div>
         </section>
         <div class="copyright">
