--- a/memberships.html
+++ b/memberships.html
@@ -31,8 +31,8 @@
                         <a class="nav-link orange-navlink-divide" href="join.html">Join us</a>
                     </li>
 
-                    <li class="nav-item active">
-                        <a class="nav-link" href="memberships.html">Memberships</a>
+                    <li class="nav-item ">
+                        <a class="nav-link active" href="memberships.html">Memberships</a>
                     </li>
 
                 </ul>
@@ -51,7 +51,7 @@
             <div class="row membership-row ">
                 <div class="col-md-12 col-lg-4 membership-scale">
                     <div class="center">
-                        <img class="membership-img" src="assets/images/casual.jpg" alt="">
+                        <img class="membership-img" src="assets/images/casual.jpg" alt="Child measuring muscles">
                         <div class="membership-container membership-border-casual ">
                             <p class="casual price">€9,99</p>
                             <h1 class="casual">Casual</h1>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 membership-scale ">
                     <div class="center">
-                        <img class="membership-img" src="assets/images/moderate.jpg" alt="">
+                        <img class="membership-img" src="assets/images/moderate.jpg" alt=" Woman showing muscles">
                         <div class="membership-container membership-border-moderate ">
                             <p class="moderate price">€18,99</p>
                             <h1 class="moderate">Moderate</h1>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 membership-scale">
                     <div class="center">
-                        <img class="membership-img" src="assets/images/king.jpg" alt="">
+                        <img class="membership-img" src="assets/images/king.jpg" alt="Man showing muscles">
                         <div class="membership-container membership-border-king ">
                             <p class="king price">€25,99</p>
                             <h1 class="king">King</h1>
