--- a/join.html
+++ b/join.html
@@ -27,8 +27,8 @@
             </button>
             <div class="collapse load-fix navbar-collapse medium-height" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link orange-navlink-divide" href="join.html">Join us</a>
+                    <li class="nav-item ">
+                        <a class="nav-link orange-navlink-divide active" href="join.html">Join us</a>
                     </li>
 
                     <li class="nav-item">
@@ -90,7 +90,7 @@
         </section>
         <section class="map">
             <iframe src="https://www.google.com/maps/d/u/0/embed?mid=14VJitbClzEYCp__4uO8ru5flUHZ_egAU" width="544"
-                height="408"></iframe>
+                height="408" title="King Gym location map"></iframe>
         </section>
     </main>
     <footer>
