README spellcheck done. Footer aria-label for links added to all pages. Image size reduced on memberships page.

--- a/memberships.html
+++ b/memberships.html
@@ -92,9 +92,9 @@
         <div class="social-media">
             <div class="group">
                 <h1>Stay in touch</h1>
-                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/" aria-label="Link to Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/" aria-label="Link to Facebook"><i class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com/" aria-label="Link to Twitter"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
         <div class="copyright">
