Small responsiveness modifications.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 </div>
                 <div class="modal-body">
                     <p>Try out our gym equipment for a day, no commitments. Just fill out the form below and you're all
-                        set.</p>
+                        set.
+                    </p>
                     <hr class="modal-hr" />
                 </div>
 
@@ -103,7 +104,8 @@
                     <div class="line2"></div>
                 </div>
                 <button class="training-button" data-toggle="modal" data-target="#trainingModal">book a free
-                    training</button>
+                    training
+                </button>
             </div>
         </section>
         <!-- about section -->
@@ -120,14 +122,12 @@
                     <div class="col-lg-6">
                         <p>
                             We are a newly opened gym with high quality equipment in three Dublin locations. You are
-                            welcome regardless of skill level.
-                            Our dedicated team will be there to help you with anything you need. There also is an option
-                            to receive a more personalised
-                            nutritional and workout plan from our expert personal trainers. Your membership includes
-                            access to any of our gyms. Come
-                            visit our Merrion Square gym which is our biggest location with a swimming pool. It's a
-                            great way to relax after a workout. If you are
-                            unsure, just book a free training and see how you like our gym experience.
+                            welcome regardless of skill level. Our dedicated team will be there to help you with
+                            anything you need. There also is an option to receive a more personalised nutritional and
+                            workout plan from our expert personal trainers. Your membership includes access to any of
+                            our gyms. Come visit our Merrion Square gym which is our biggest location with a swimming
+                            pool. It's a great way to relax after a workout. If you are unsure, just book a free
+                            training and see how you like our gym experience.
                         </p>
                     </div>
                     <div class="col-lg-6 icon-column">
@@ -228,8 +228,8 @@
                             <h1>Anna</h1>
                             <p>
                                 The personnel in King Gym is friendly and helpful. I have been given a personalised
-                                training schedule. As a beginner, that
-                                helped getting past the initial confusion of where to start.
+                                training schedule. As a beginner, that helped getting past the initial confusion of
+                                where to start.
                             </p>
                         </div>
                     </div>
@@ -241,9 +241,8 @@
                             <h1>Jim</h1>
                             <p>
                                 King Gym is the best gym I have ever visited. It has all the equipment that you could
-                                ever need. Forget waiting for
-                                someone to finish their set. There are three locations in different parts of city center
-                                which is convenient.
+                                ever need. Forget waiting for someone to finish their set. There are three locations in
+                                different parts of city center which is convenient.
                             </p>
                         </div>
                     </div>
@@ -255,8 +254,7 @@
                             <h1>Emma</h1>
                             <p>
                                 King Gym makes me feel like home. There is a wonderful atmosphere and people who you can
-                                ask for help. I even made some
-                                new friends.
+                                ask for help. I even made some new friends.
                             </p>
                         </div>
                     </div>
