--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description"
         content="Gyms in Dublin with high quality equipment and a friendly atmosphere. All skill and fitness levels welcome! Book a free training." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="image" property="og:image"
+    content="https://github.com/ihitrec/King_Gym/raw/master/assets/images/images_README/Responsive.jpg" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/69b2179d00.js" crossorigin="anonymous"></script>
